--- a/sign-in.css
+++ b/sign-in.css
@@ -60,6 +60,9 @@ form {
     flex-direction: column;
     gap: 20px;
 }
+.confirmation {
+    color: #e50914;
+}
 input[type="text"] {
     margin-top: 30px;
 }
