added flex wrap

--- a/style.css
+++ b/style.css
@@ -182,8 +182,9 @@ body {
 .card-container {
     width: 80vw;
     display: flex;
-    justify-content: space-between;
-    gap: 40px;
+    justify-content: center;
+    flex-wrap: wrap;
+    gap: 10px;
     align-items: center;
 }
 .arrow {
